--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,48 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/*************************/
+/* HEADER */
+/*************************/
+.main-header {
+    padding: 2.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-html {
-    font-size: 62.5%;
+.logo {
+    height: 6.4rem;
 }
 
-body {
-    background-color: #fff;
-    color: #333;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    line-height: 1;
+.main-nav-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 4.8rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+    display: inline-block;
+    color: inherit;
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 500;
+    transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+    color: #1864ab;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+    background-color: #1864ab;
+    color: #fff;
+    padding: 1.2rem 2.4rem;
+    border-radius: 10px;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+    background-color: #2f74b3;
 }
