--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@
     display: inline-block;
     color: inherit;
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 500;
     transition: all 0.3s;
 }
@@ -45,4 +45,30 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
     background-color: #2f74b3;
+}
+
+/*************************/
+/* HERO SECTION */
+/*************************/
+.section-hero {
+    padding: 9.6rem 0;
+}
+
+.hero-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+    gap: 0 9.6rem;
+}
+
+.hero-text {
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
+}
+
+.hero-img {
+    width: 100%;
 }
