--- a/static/css/general.css
+++ b/static/css/general.css
@@ -23,7 +23,35 @@ html {
 body {
     background-color: #fff;
     color: #333;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     line-height: 1;
+}
+
+.container {
+    max-width: 120rem;
+    margin: 0 auto;
+}
+
+.heading-primary {
+    font-size: 5.2rem;
+    font-weight: 700;
+    line-height: 1.05;
+    margin-bottom: 4.8rem;
+}
+
+.btn {
+    border: none;
+    background-color: #1864ab;
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: 600;
+    padding: 1.2rem 2.4rem;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.btn:hover {
+    background-color: #2f74b3;
 }
