add content for features section

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,67 @@
                     </div>
                 </div>
             </section>
+
+            <!-- FEATURES SECTION -->
+            <section class="section-features">
+                <div class="container">
+                    <p class="sub-heading">Features</p>
+                    <h2 class="heading-secondary">How does all this work?</h2>
+
+                    <div class="features">
+                        <!-- FEATURE 1 -->
+                        <div class="feature-img-box">
+                            <img
+                                src="{{url_for('static', filename='./images/feature-image-1.png')}}"
+                                alt=""
+                                class="feature-img"
+                            />
+                        </div>
+                        <div class="feature-box">
+                            <p class="feature-heading">Preview Tags</p>
+                            <p class="feature-text">
+                                Our Machine Learning algorithm goes through the
+                                email's content and classifies them based on a
+                                tag.
+                            </p>
+                        </div>
+
+                        <!-- FEATURE 2 -->
+                        <div class="feature-box">
+                            <p class="feature-heading">Send Response</p>
+                            <p class="feature-text">
+                                You can select the tag's associated box to write
+                                the content that you would like to send out as
+                                the email.
+                            </p>
+                        </div>
+                        <div class="feature-img-box">
+                            <img
+                                src="{{url_for('static', filename='./images/feature-image-2.png')}}"
+                                alt="A hand-sketched image of pencil writing on a sticky note"
+                                class="feature-img"
+                            />
+                        </div>
+
+                        <!-- FEATURE 3 -->
+                        <div class="feature-img-box">
+                            <img
+                                src="{{url_for('static', filename='./images/feature-image-3.png')}}"
+                                alt=""
+                                class="feature-img"
+                            />
+                        </div>
+                        <div class="feature-box">
+                            <p class="feature-heading">Receive Feedback</p>
+                            <p class="feature-text">
+                                If the student is not satisfied with the
+                                response you wrote, you can always write a
+                                personalized one.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
