--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,3 +72,37 @@
 .hero-img {
     width: 100%;
 }
+
+/*************************/
+/* FEATURES SECTION */
+/*************************/
+.section-features {
+    padding: 9.6rem 0;
+}
+
+.features {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 6.4rem 9.6rem;
+}
+
+.feature-img-box {
+    display: flex;
+    justify-content: center;
+}
+
+.feature-img {
+    width: 75%;
+}
+
+.feature-heading {
+    font-size: 3.6rem;
+    font-weight: 700;
+    margin-bottom: 3.2rem;
+}
+
+.feature-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
