--- a/static/css/general.css
+++ b/static/css/general.css
@@ -40,6 +40,22 @@ body {
     margin-bottom: 4.8rem;
 }
 
+.heading-secondary {
+    font-size: 4.4rem;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 4.8rem;
+}
+
+.sub-heading {
+    color: #1864ab;
+    font-size: 1.6rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+    margin-bottom: 3.2rem;
+}
+
 .btn {
     border: none;
     background-color: #1864ab;
