add content for cta section

--- a/templates/index.html
+++ b/templates/index.html
@@ -136,6 +136,17 @@
                     </div>
                 </div>
             </section>
+
+            <!-- CTA SECTION -->
+            <section class="section-cta">
+                <div class="container cta--container">
+                    <h2 class="heading-secondary cta--heading">
+                        Don't waste your precious time communicating back and
+                        forth when you could be teaching
+                    </h2>
+                    <button class="btn btn--cta">Get started today</button>
+                </div>
+            </section>
         </main>
     </body>
 </html>
