--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,3 +106,35 @@
     font-size: 1.8rem;
     line-height: 1.8;
 }
+
+/*************************/
+/* CTA SECTION */
+/*************************/
+.section-cta {
+    padding: 9.6rem 0;
+}
+
+.cta--container {
+    background-color: #1864ab;
+    padding: 4.8rem;
+    border-radius: 12px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cta--heading {
+    text-align: center;
+    margin-bottom: 4.8rem;
+    color: #fff;
+}
+
+.btn.btn--cta {
+    background-color: #fff;
+    color: #1864ab;
+}
+
+.btn.btn--cta:hover {
+    background-color: #ddd;
+}
