add content for footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -142,11 +142,33 @@
                 <div class="container cta--container">
                     <h2 class="heading-secondary cta--heading">
                         Don't waste your precious time communicating back and
-                        forth when you could be teaching
+                        forth when you could spend time teaching
                     </h2>
                     <button class="btn btn--cta">Get started today</button>
                 </div>
             </section>
         </main>
+
+        <!-- FOOTER -->
+        <footer>
+            <div class="container footer--container">
+                <a href="#">
+                    <img
+                        src="{{ url_for('static', filename='./images/logo.png') }}"
+                        alt="InstantInbox logo"
+                        class="logo"
+                    />
+                </a>
+                <p class="builder">
+                    Built by
+                    <a
+                        href="https://github.com/AV2001"
+                        target="_blank"
+                        class="footer-link"
+                        >Anirudh Vadlamani</a
+                    >
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
