add content for about section

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,74 @@
 {% extends 'base.html' %} {% block content %}
 <!-- MAIN -->
-<main></main>
+<main>
+    <!-- ABOUT SECTION -->
+    <section class="section-about">
+        <div class="container">
+            <div class="about-text-box">
+                <h1 class="heading-primary center-text">About</h1>
+                <p class="about-text">
+                    Welcome to Instant Inbox, the intelligent email management
+                    web application that uses machine learning to help you
+                    manage your inbox with ease. We understand that managing
+                    emails can be overwhelming and time-consuming, and that's
+                    why we have developed a solution that can help you organize
+                    and prioritize your emails with just a few clicks.
+                </p>
+                <p class="about-text">
+                    Our system is designed to automate the process of email
+                    management by using artificial intelligence and machine
+                    learning algorithms. With Instant Inbox, you can assign tags
+                    to incoming emails, and the system will automatically send
+                    pre-written responses based on those tags. This means that
+                    you can spend less time dealing with your inbox and more
+                    time focusing on your work or other important tasks.
+                </p>
+                <p class="about-text">
+                    Our platform is easy to use, and you don't need any special
+                    skills or technical knowledge to get started. All you need
+                    is an email account, and you can sign up for Instant Inbox
+                    in just a few minutes. Once you have signed up, you can
+                    start using our features right away.
+                </p>
+                <p class="about-text">
+                    The key feature of Instant Inbox is the ability to assign
+                    tags to incoming emails. These tags help you categorize your
+                    emails and determine how they should be handled. For
+                    example, you can assign a tag to an email that requires a
+                    response, and Instant Inbox will automatically send a
+                    pre-written response to the sender. This can save you a lot
+                    of time, especially if you receive a lot of similar emails.
+                </p>
+                <p class="about-text">
+                    At Instant Inbox, we are committed to providing our users
+                    with the best possible experience. We understand that every
+                    user is unique, and that's why we offer a range of
+                    customization options to suit your needs. Whether you want
+                    to customize your pre-written responses or create your own
+                    tags, our platform makes it easy to do so.
+                </p>
+                <p class="about-text">
+                    We also understand the importance of security and privacy
+                    when it comes to email management. That's why we have
+                    implemented strict security measures to ensure that your
+                    data is safe and secure. We use encryption to protect your
+                    data, and we never share your information with third
+                    parties.
+                </p>
+                <p class="about-text">
+                    In summary, Instant Inbox is an easy-to-use intelligent
+                    email management web application that utilizes machine
+                    learning to help you manage your inbox with greater
+                    efficiency. Our platform is designed to automate the process
+                    of email management, allowing you to spend less time dealing
+                    with your inbox and more time focusing on your work or other
+                    important tasks. With our customizable features and strict
+                    security measures, you can be confident that your emails are
+                    in good hands. Sign up for Instant Inbox today and take
+                    control of your inbox!
+                </p>
+            </div>
+        </div>
+    </section>
+</main>
 {% endblock content %}
