--- a/static/css/general.css
+++ b/static/css/general.css
@@ -71,3 +71,106 @@ body {
 .btn:hover {
     background-color: #2f74b3;
 }
+
+.center-text {
+    text-align: center;
+}
+
+/*************************/
+/* HEADER */
+/*************************/
+.main-header {
+    padding: 2.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    height: 6.4rem;
+}
+
+.main-nav-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 4.8rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+    display: inline-block;
+    color: inherit;
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 500;
+    transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+    color: #1864ab;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+    background-color: #1864ab;
+    color: #fff;
+    padding: 1.2rem 2.4rem;
+    border-radius: 10px;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+    background-color: #2f74b3;
+}
+
+/*************************/
+/* FOOTER */
+/*************************/
+footer {
+    border-top: 1px solid #eee;
+    padding: 12.8rem 0 2.4rem;
+}
+
+.footer--container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.builder {
+    font-size: 1.6rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+    text-decoration: none;
+    color: #1864ab;
+    border-bottom: 2px solid currentColor;
+    transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+    border-bottom: 2px solid transparent;
+}
+
+/** STYLES FOR ABOUT.HTML **/
+/*************************/
+/* ABOUT SECTION */
+/*************************/
+.section-about {
+    padding: 9.6rem 0 12.8rem;
+}
+
+.about-text-box {
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+.about-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 2.4rem;
+}
