--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,52 +1,4 @@
-/*************************/
-/* HEADER */
-/*************************/
-.main-header {
-    padding: 2.4rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.logo {
-    height: 6.4rem;
-}
-
-.main-nav-list {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 4.8rem;
-}
-
-.main-nav-link:link,
-.main-nav-link:visited {
-    display: inline-block;
-    color: inherit;
-    text-decoration: none;
-    font-size: 1.8rem;
-    font-weight: 500;
-    transition: all 0.3s;
-}
-
-.main-nav-link:hover,
-.main-nav-link:active {
-    color: #1864ab;
-}
-
-.main-nav-link.nav-cta:link,
-.main-nav-link.nav-cta:visited {
-    background-color: #1864ab;
-    color: #fff;
-    padding: 1.2rem 2.4rem;
-    border-radius: 10px;
-}
-
-.main-nav-link.nav-cta:hover,
-.main-nav-link.nav-cta:active {
-    background-color: #2f74b3;
-}
-
+/** STYLES FOR INDEX.HTML **/
 /*************************/
 /* HERO SECTION */
 /*************************/
@@ -137,35 +89,4 @@
 
 .btn.btn--cta:hover {
     background-color: #ddd;
-}
-
-/*************************/
-/* FOOTER */
-/*************************/
-footer {
-    border-top: 1px solid #eee;
-    padding: 12.8rem 0 2.4rem;
-}
-
-.footer--container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.builder {
-    font-size: 1.6rem;
-}
-
-.footer-link:link,
-.footer-link:visited {
-    text-decoration: none;
-    color: #1864ab;
-    border-bottom: 2px solid currentColor;
-    transition: all 0.3s;
-}
-
-.footer-link:hover,
-.footer-link:active {
-    border-bottom: 2px solid transparent;
 }
