--- a/static/css/general.css
+++ b/static/css/general.css
@@ -56,19 +56,30 @@ body {
     margin-bottom: 3.2rem;
 }
 
-.btn {
+.btn,
+.btn--filled {
     border: none;
-    background-color: #1864ab;
-    color: #fff;
+    background: none;
+    color: inherit;
+    font-family: inherit;
     font-size: 1.8rem;
-    font-weight: 600;
-    padding: 1.2rem 2.4rem;
-    border-radius: 10px;
+    font-weight: 500;
     cursor: pointer;
     transition: all 0.3s;
 }
 
-.btn:hover {
+.btn--nav:hover {
+    color: #1864ab;
+}
+
+.btn--filled {
+    background-color: #1864ab;
+    color: #fff;
+    padding: 1.2rem 2.4rem;
+    border-radius: 10px;
+}
+
+.btn--filled:hover {
     background-color: #2f74b3;
 }
 
