update look of page buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                         Artificial Intelligence to help you automate the process
                         of responding to emails with our easy-to-use interface.
                     </p>
-                    <button class="btn">Start here</button>
+                    <button class="btn btn--filled">Start here</button>
                 </div>
                 <div class="hero-img-box">
                     <img
