--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,6 +85,8 @@
 .btn.btn--cta {
     background-color: #fff;
     color: #1864ab;
+    padding: 1.2rem 2.4rem;
+    border-radius: 10px;
 }
 
 .btn.btn--cta:hover {
