modify create account form attributes

--- a/templates/base.html
+++ b/templates/base.html
@@ -115,11 +115,7 @@
         </form>
 
         <!-- CREATE ACCOUNT FORM -->
-        <form
-            id="create-account-form"
-            action="/user/create-account"
-            method="post"
-        >
+        <form id="create-account-form">
             <h2>Create Account</h2>
             <button class="close-btn">
                 <svg
