--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <!-- FAVICON -->
+        <link
+            rel="icon"
+            href="{{ url_for('static', filename='./images/favicon.png') }}"
+        />
+
         <!-- GOOGLE FONTS (FONT FAMILY = INTER) -->
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
