fix error in log in email label

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
             <div class="form-fields">
                 <!-- EMAIL -->
                 <div>
-                    <label for="log-in-email" id="log-in-email">Email</label>
+                    <label for="log-in-email">Email</label>
                     <input
                         type="email"
                         name="log-in-email"
